--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="/water.min.css">
+    <link rel="stylesheet" type="text/css" href="/main.css">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <title>Mithril ESBuild Starter</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Rob Kay</title>
   </head>
   <body>
     <main id="app"></main>
